--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/base"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <ImageView
+        android:id="@+id/MovieImage"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/akashi" />
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="175dp"
-            android:layout_height="175dp"
-            app:srcCompat="@drawable/akashi" />
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="175dp"
-            android:layout_height="29dp"
-            android:text="TextView" />
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/MovieTitle"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_row="1"
+        android:layout_column="0"
+        android:layout_gravity="start"
+        android:layout_weight="1"
+        android:hint="Movie Title"
+        android:text=" "
+        android:textSize="40sp" />
+</GridLayout>
