--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="150dp"
+    android:layout_height="220dp"
+    android:textAlignment="center">
 
     <ImageView
         android:id="@+id/MovieImage"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:scaleType="fitXY"
         app:srcCompat="@drawable/akashi" />
 
     <TextView
         android:id="@+id/MovieTitle"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_width="150dp"
+        android:layout_height="25dp"
         android:layout_row="1"
         android:layout_column="0"
         android:layout_gravity="start"
         android:layout_weight="1"
         android:hint="Movie Title"
-        android:text=" "
-        android:textSize="40sp" />
+        android:shadowColor="#000000"
+        android:text="Akashi"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="34sp"
+        android:textStyle="bold|italic"
+        app:autoSizeTextType="uniform" />
 </GridLayout>
